# keyward

./: .dockerignore  .gitignore  .nox.yaml  .warden.yaml  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  cornucopia.toml
.github/workflows/: ci.yml  release.yml
.nox/: baseline.json
app/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
app/scripts/: keymaterial.test.ts  roundtrip.test.ts  trust.test.ts
app/src/: App.vue  main.ts
app/src-tauri/: .gitignore  Cargo.toml  README.md  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: lib.rs  main.rs
app/src/components/: AddItemDialog.vue  AppShell.vue  BrandBar.vue  EmergencyKitDialog.vue  ExportDialog.vue  FamilyDetail.vue  FamilyList.vue  ImportDialog.vue  ItemDetail.vue  ItemList.vue  ShareDialog.vue  SideNav.vue  SyncDialog.vue  ToastHost.vue  TopBar.vue  TotpField.vue  UnlockView.vue  WatchtowerView.vue
app/src/composables/: useToast.ts
app/src/lib/: account.ts  export.ts  import.ts  passbook-types.ts  passbook.ts  seed.ts  sharing.ts  sync.ts  trust.ts
app/src/stores/: share.ts  vault.ts
app/src/styles/: tokens.css
crates/broker/: Cargo.toml
crates/broker/src/: action.rs  adapters.rs  audit.rs  broker.rs  capability.rs  lib.rs  policy.rs  ports.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/crypto/: Cargo.toml
crates/crypto/src/: lib.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: main.rs
crates/mint/: Cargo.toml
crates/mint/src/: aws.rs  exchange.rs  exec.rs  github.rs  lib.rs  run.rs
crates/passbook/: Cargo.toml
crates/passbook-cli/: Cargo.toml
crates/passbook-cli/src/: adapters.rs  bridge.rs  main.rs
crates/passbook-wasm/: Cargo.toml  README.md
crates/passbook-wasm/src/: lib.rs
crates/passbook/src/: bridge.rs  domain.rs  generate.rs  lib.rs  ports.rs  sealing.rs  sharing.rs  totp.rs  watchtower.rs  wordlist.txt
crates/profiles/: Cargo.toml
crates/profiles/src/: lib.rs
crates/sync/: Cargo.toml
crates/sync-postgres/: Cargo.toml  schema.sql
crates/sync-postgres-queries/: Cargo.toml
crates/sync-postgres-queries/src/: queries.rs
crates/sync-postgres-queries/src/queries/: accounts.rs
crates/sync-postgres/queries/: accounts.sql
crates/sync-postgres/src/: lib.rs
crates/sync-postgres/tests/: contract_postgres.rs
crates/sync-server/: Cargo.toml
crates/sync-server/src/: main.rs
crates/sync-server/tests/: version_consistency.rs
crates/sync/src/: accounts.rs  contract.rs  groups.rs  lib.rs
crates/sync/tests/: contract_memory.rs
crates/vault/: Cargo.toml
crates/vault/src/: lib.rs
demo/: Dockerfile  README.md  docker-compose.demo.yml  seed.sh
deploy/: .env.example  Dockerfile  Dockerfile.static  Dockerfile.web  README.md  backup.sh  docker-compose.pg.yml
deploy/k8s/: deployment.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  networkpolicy.yaml  pdb.yaml  postgres.yaml  pvc.yaml  service.yaml  web-deployment.yaml  web-ingress.yaml  web-pdb.yaml  web-service.yaml
deploy/k8s/examples/: metrics-block-traefik.yaml
deploy/nginx/: default.conf.template
docs/architecture/: ADR-0001-broker-security-model.md  ADR-0002-scaling-credential-use.md  ADR-0003-ddd-hexagonal-structure.md  ADR-0004-family-sharing.md  ADR-0005-managed-cloud.md  ADR-0006-team-and-enterprise.md  ADR-0007-desktop-autofill-bridge.md  context-map.md  ubiquitous-language.md
docs/product/: product-spec.md
docs/research/: market-and-feature-research.md
docs/security/: README.md  THREAT-MODEL.md  ai-preaudit-review.md  cryptography-spec.md  known-limitations.md  review-scope.md  threat-model-passbook.md
extension/: README.md  background.js  content.js  manifest.json  popup.css  popup.html  popup.js
extension/native-host/: README.md  com.klarlabs.proctor.passbook.json  keyward-passbook-bridge.sh  proctor-passbook-bridge.sh
memory/: context-budget.md  decisions.md  open-threads.md  roadmap.md  status.md
memory/sessions/: 2026-07-19.md
profiles/: README.md  aws.toml  azure.toml  github.toml  gitlab.toml  hetzner.toml
wiki/: architecture.md  vendor-notes.md
