[workspace]
resolver = "2"
members = ["crates/vault", "crates/broker", "crates/cli", "crates/mcp", "crates/mint", "crates/profiles", "crates/passbook", "crates/passbook-cli", "crates/passbook-wasm"]

[workspace.package]
version = "1.13.0"
edition = "2021"
license = "AGPL-3.0-or-later"
repository = "https://github.com/klarlabs/proctor"
rust-version = "1.90"

[profile.release]
lto = true
