# Standalone workspace: the empty [workspace] table below detaches this crate
# from the parent Keyward Cargo workspace at the repo root, so the desktop
# shell builds independently and never perturbs the parent build.
[workspace]

[package]
name = "keyward-passbook-desktop"
version = "2.1.0"
description = "Native desktop shell for the Keyward Passbook web vault"
authors = ["Klar Labs"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/klarlabs/keyward"
edition = "2021"
rust-version = "1.90"

# The library holds the Tauri builder (`run`). The binary is a thin entrypoint
# that calls into it — this split is what Tauri v2 expects and enables mobile
# targets to reuse the same `run()` if ever needed.
[lib]
name = "keyward_passbook_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "keyward-passbook-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# The shared autofill bridge protocol (ADR-0007): the desktop agent answers the
# browser extension from the same `keyward_passbook::bridge` implementation the
# CLI host uses, so the two hosts cannot drift. Path dep across the standalone
# workspace boundary — Cargo resolves it regardless of workspace membership.
keyward-passbook = { path = "../../crates/passbook" }

[profile.release]
lto = true
