[package]
name = "proctor-broker"
description = "Proctor AI credential broker — the security model: capabilities, origin-binding, propose-not-commit, policy tiers, hash-chained audit."
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
