[package]
name = "keyward-cli"
description = "Keyward CLI — demonstrates the credential broker end-to-end."
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "keyward"
path = "src/main.rs"

[dependencies]
keyward-vault = { path = "../vault" }
keyward-broker = { path = "../broker" }
keyward-profiles = { path = "../profiles" }
