[package]
name = "proctor-mcp"
description = "Proctor credential broker exposed as an MCP server (stdio) via rmcp."
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "proctor-mcp"
path = "src/main.rs"

[dependencies]
proctor-broker = { path = "../broker" }
proctor-vault = { path = "../vault" }
proctor-mint = { path = "../mint" }
rmcp = { version = "2", features = ["server", "macros", "transport-io", "elicitation", "schemars"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "io-std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
async-trait = "0.1"
