[package]
name = "keyward-mcp"
description = "Keyward credential broker exposed as an MCP server (stdio) via rmcp."
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "keyward-mcp"
path = "src/main.rs"

[dependencies]
keyward-broker = { path = "../broker" }
keyward-vault = { path = "../vault" }
keyward-mint = { path = "../mint" }
keyward-profiles = { path = "../profiles" }
rmcp = { version = "2", features = ["server", "macros", "transport-io", "elicitation", "schemars"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "io-std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
async-trait = "0.1"
zeroize = "1"

[dev-dependencies]
toml = "0.8"
