[package]
name = "passbook-cli"
description = "Proctor Passbook CLI — manage the consumer vault from the terminal."
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "passbook"
path = "src/main.rs"

[dependencies]
proctor-passbook = { path = "../passbook" }
serde_json = "1"
