[package]
name = "passbook-cli"
description = "Keyward Passbook CLI — manage the consumer vault from the terminal."
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "passbook"
path = "src/main.rs"

[dependencies]
keyward-passbook = { path = "../passbook" }
serde_json = "1"
