[package]
name = "passbook-wasm"
description = "Keyward Passbook — WebAssembly bindings so the vault runs in the browser."
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
keyward-passbook = { path = "../passbook" }
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# `keyward-passbook` uses `OsRng` (rand 0.8 -> getrandom 0.2) for salts/nonces.
# On `wasm32-unknown-unknown` getrandom has no default entropy source, so we
# opt into the browser's Web Crypto backend via the `js` feature. This unifies
# the feature across the workspace and is only compiled in for wasm targets.
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
