[package]
name = "proctor-passbook"
description = "Proctor consumer credential manager (Phase A) — rich item model, TOTP, Secret Key (2SKD), and Watchtower security analysis."
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
proctor-crypto = { path = "../crypto" }
chacha20poly1305 = "0.10"
x25519-dalek = { version = "2", features = ["static_secrets", "zeroize"] }
hkdf = "0.12"
rand = "0.8"
zeroize = { version = "1", features = ["zeroize_derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
sha2 = "0.10"
hmac = "0.12"
sha1 = "0.10"
base32 = "0.5"
ed25519-dalek = { version = "3.0.0", features = ["rand_core", "zeroize"] }
