[package]
name = "keyward-profiles"
description = "Keyward provider profiles — external, pluggable TOML descriptors (env mapping + command-risk) so new providers need no code."
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
regex = "1"
thiserror = "1"
