[package]
name = "proctor-sync-server"
description = "Zero-knowledge sync server — stores opaque sealed-vault blobs over a tiny HTTP API. Never sees plaintext."
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "proctor-sync-server"
path = "src/main.rs"

[dependencies]
proctor-sync = { path = "../sync" }
tiny_http = "0.12"
