[package]
name = "keyward-sync-server"
description = "Zero-knowledge sync server — stores opaque sealed-vault blobs over a tiny HTTP API. Never sees plaintext."
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "keyward-sync-server"
path = "src/main.rs"

[dependencies]
keyward-sync = { path = "../sync" }
keyward-sync-postgres = { path = "../sync-postgres" }
hmac = "0.12"
serde_json = "1"
sha2 = "0.10"
tiny_http = "0.12"
# Blocking HTTPS client for the Stripe Checkout call (rustls, no OpenSSL).
ureq = "2"
