[package]
name = "proctor-sync"
description = "Zero-knowledge sync domain — versioned push/pull of an opaque sealed-vault blob the server can never read."
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "1"
