[package]
name = "keyward-sync"
description = "Zero-knowledge sync domain — versioned push/pull of an opaque sealed-vault blob the server can never read."
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
# Exposes `contract` — reusable port-contract suites for adapter tests. Off by default.
testkit = []

[dependencies]
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "1"
