[package]
name = "proctor-vault"
description = "Proctor encrypted vault core (Argon2id + XChaCha20-Poly1305). PROTOTYPE."
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
proctor-crypto = { path = "../crypto" }
zeroize = { version = "1", features = ["zeroize_derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
